--- a/public/index.html
+++ b/public/index.html
@@ -1,73 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BEJO | BAR & RESTO</title>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bulma.css">
   <link rel="stylesheet" href="css/wave.css">
+  <link rel="stylesheet" href="css/lain.css">
   <link href="aos-master/dist/aos.css" rel="stylesheet">
   <link rel="icon" href="image/bejoresto-logo.png">
-  <style>
-
-    #tab-content div {           
-      display: none;              
-     }                                                    
-    #tab-content div.is-active {
-      display: block;             
-     }                           
-    .test  {
-    animation: fadein 2s;
-    -moz-animation: fadein 2s; /* Firefox */
-    -webkit-animation: fadein 2s; /* Safari and Chrome */
-    -o-animation: fadein 2s; /* Opera */
-}
-@keyframes fadein {
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-moz-keyframes fadein { /* Firefox */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-webkit-keyframes fadein { /* Safari and Chrome */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-o-keyframes fadein { /* Opera */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-
-.modal-open {
-    overflow: hidden;
-    position:fixed;
-    width: 100%;
-    height: 100%;
-}
-
-
-  </style>
 </head>
 <body>
 <div class="modal is-hidden-touch" id="modal">
@@ -80,11 +22,6 @@
     <div class="slide1">
       <div class="content-slider">
         <div class="slider about-slider">
-          <div>
-            <p class="image is-4by5">
-              <img src="image/promo/1.jpeg" style="width:88%; height:auto; margin: auto; margin-top:0; position: absolute; ">
-            </p> 
-          </div>
           <div>
             <p class="image is-4by5">
               <img src="image/promo/2.jpeg" style="width:88%; height:auto; margin: auto; margin-top:0; position: absolute; ">
@@ -112,11 +49,6 @@
     <div class="slide1">
       <div class="content-slider">
         <div class="slider about-slider">
-          <div>
-            <p class="image is-4by5">
-              <img src="image/promo/1.jpeg" style="width:90%; height:auto; margin: 0 auto; margin-left: 0px; margin-top:0; position: absolute; ">
-            </p> 
-          </div>
           <div>
             <p class="image is-4by5">
               <img src="image/promo/2.jpeg" style="width:90%; height:auto; margin: 0 auto; margin-left: 0px; margin-top:0; position: absolute; ">
@@ -187,19 +119,19 @@
       <h1 data-aos="fade-up" data-aos-once="true" class="title has-text-centered menu-title">Our New Dishes</h1>
       <div class="columns">
         <div class="column">
-        <img data-aos="flip-right" data-aos-once="true" src="image/chicken.jpeg" />
+        <img data-aos="flip-right" data-aos-once="true" src="image/food/gurame.jpeg" />
         </div>
         <div class="column">
           <div data-aos="fade-up" data-aos-once="true" class="title has-text-centered menu-subtitle">
-            Chicken wings
+            Gurame Fish
           </div>
           <p data-aos="fade-up" data-aos-once="true" class="has-text-justified menu-isi is-size-5-touch">
-            It’s been a long time stuck inside your busy life? So we Cooked up these Chicken wings with mix taste for dinner, from our homegrown !
+            another special menu is "gurame fish", which is freshly fried and Made with special recipe and treat corectly make the gurame bejo so special, crunchy outside soft inside.
           <br><br>
           </p>
           <span>
             <div data-aos="fade-up" data-aos-once="true" class="has-text-centered menu-harga is-size-1 is-size-2-touch">
-              Rp. 38.000
+              Rp. 87.000
             </div>
           </span>
         </div>
@@ -343,43 +275,56 @@
 <!--<div class="wave-smoke"></div>-->
 <div class="wave"></div>                                      
 <section id="features" class="hero is-white slide1">
-  <div class="content-slider">
-    <div data-aos="fade-down" data-aos-once="true" class="title has-text-centered menu-title">About Our Restaurant</div>
-	<div class="slider about-slider">
-      <div class="container is-fluid">
-        <div class="columns">
-          <div class="column">                                                                  
-            <img data-aos="flip-right" data-aos-once="true" src="image/bejo.JPG">
-          </div>                                                                                
-          <div class="column">                                                                  
-            <h1 data-aos="fade-down" data-aos-once="true" class="title has-text-centered menu-subtitle">
-              BEJO
-            </h1>                                                                               
-            <p data-aos="fade-down" data-aos-once="true" class="has-text-justified menu-isi is-size-5-touch">
-              Bejo restaurant is a restaurant that provides western food and has a bar that provides five-star quality coffee,
-Bejo restaurant is also suitable for hangout because we have fast wifi, every night at Bejo Reso there is also live music
-With this exciting band, we also facilitate our customers with yoga classes, private parties and DJs that will accompany your day.
-            </p>                                                                                
-          </div>
-        </div>
+<div class="container" data-aos="fade-up" data-aos-once="true">
+    <div class="title has-text-centered menu-title">About Our Restaurant</div>
+  <div class="columns">
+    <div class="column">
+      <div class="rounded-img-container">
+        <img class="rounded-img" src="image/food/burger.jpeg">
       </div>
-      <div class="container is-fluid">
-        <div class="columns">
-          <div class="column">                                                                  
-            <img data-aos="flip-right" data-aos-once="true" src="image/coworking1.JPG">
-          </div>                                                                                
-          <div class="column">                                                                  
-            <h1 data-aos="fade-down" data-aos-once="true" class="title has-text-centered menu-subtitle">
-              Co-Working Space 
-            </h1>                                                                               
-            <p data-aos="fade-down" data-aos-once="true" class="has-text-justified menu-isi is-size-5-touch">
-            Bejo restaurant is a restaurant that have two types of co-working space  there are free and paid, and each co-working space definitely will suitable for you to have a meeting with your group or something else, and we also have a fastest wifi that provide by hypernet, and in the co-working space have 2 Air Conditioner to make the room cooler.
-            </p>                                                                                
-          </div>
-        </div>
-      </div>
-	</div>
+      <p class="has-text-centered is-size-4" style="margin: auto; padding-top:20px; padding-bottom:20px;"><b>Cuisene</b></p>
+      <p class="has-text-centered" style="margin: auto;">
+        THE CUISINES
+Our restaurant and bar an endless array of options for you to indulge in. Indonesian, western, asian and other International cuisines with a signature twist await to take your palate on an adventure.
+      </p>
   </div>
+  <div class="column">
+      <div class="rounded-img-container">
+        <img class="rounded-img" src="image/kopi.jpeg">
+      </div>
+      <p class="has-text-centered is-size-4" style="margin: auto; padding-top:20px; padding-bottom:20px;"><b>Coffee</b></p>
+      <p class="has-text-centered" style="margin: auto;">
+        Coffee PORN?
+BEJO is the answer
+Find your coffee match n please your basic instinc n do what ever u like.
+No sensor n rouls....just you n coffee
+      </p>
+  </div>
+  <div class="column">
+      <div class="rounded-img-container">
+      <img class="rounded-img" src="image/space.jpg">
+      </div>
+      <p class="has-text-centered is-size-4" style="margin: auto; padding-top:20px; padding-bottom:20px;"><b>Coworking Space</b></p>
+      <p class="has-text-centered" style="margin: auto;">
+Be limitless...time chasing you up with the deadline n stomach can't hardly wait to be delay another minutes. Come to bejo n make it all in once...our coworking space will help all your routines n our meals will cuddling u up with the taste sensation
+Be limitless n catch your succes with bejo
+Happy tummy happy work happy life
+      </p>
+
+  </div>
+  <div class="column">
+      <div class="rounded-img-container">
+        <img class="rounded-img" src="image/bar.jpg">
+      </div>
+      <p class="has-text-centered is-size-4" style="margin: auto; padding-top:20px; padding-bottom:20px;"><b>Bar</b></p>
+      <p class="has-text-centered" style="margin: auto;">
+Drifting with routines makes dizzy so add another dizziness with clasic margarita n another bejos signature right at bejo’s bar...so our life will get balance Cooming soon our bejo’s bar n please be our VIP guest list by giving us your email n phone number only
+      </p>
+    </div>
+  </div>
+</div>
+
+
 </section>
 
 <div class="waveup"></div>                                      
@@ -390,7 +335,7 @@ With this exciting band, we also facilitate our customers with yoga classes, pri
     <span class="border caption-opening-title is-size-1 is-size-4-touch" >Opening Hours</span>
     <br><br><br>
     <span data-aos="fade-down" data-aos-once="true" class="border has-text-weight-light is-uppercase is-size-5-touch" style="background-color:transparent;font-size:2rem; padding-bottom:10px; letter-spacing:3px;">Open Everyday</span> <br>
-    <span data-aos="fade-down" data-aos-once="true" class="border has-text-weight-semibold" style="background-color:transparent;font-size:1.7rem; padding-bottom:10px; letter-spacing:1px;">09.00<span class="is-size-6 has-text-white-bis has-text-weight-light">AM</span> - 01.00<span class="is-size-6 has-text-white-bis has-text-weight-light">AM</span></span> <br><br><br>
+    <span data-aos="fade-down" data-aos-once="true" class="border has-text-weight-semibold" style="background-color:transparent;font-size:1.7rem; padding-bottom:10px; letter-spacing:1px;">09.00<span class="is-size-6 has-text-white-bis has-text-weight-light">AM</span>- 01.00<span class="is-size-6 has-text-white-bis has-text-weight-light">AM</span></span> <br><br><br>
     <span data-aos="fade-down" data-aos-once="true" class="border has-text-weight-light is-uppercase is-size-5-touch" style="background-color:transparent;font-size:1.6rem; padding-bottom:10px; letter-spacing:3px;"> call for reservation</span> <br>                          
     <span data-aos="fade-down" data-aos-once="true" class="border has-text-centered has-text-white-bis has-text-weight-semibold" style="background-color:transparent;letter-spacing:1px;font-size:1.2rem;color:#fff;">085737707018<span class="has-text-weight-light has-text-white-bis"><br>or<br></span>082144638086</span>
                                                                                     
@@ -465,20 +410,8 @@ With this exciting band, we also facilitate our customers with yoga classes, pri
     </div>
 </footer>
 
-<script>
-  //map
-function initMap() {
-  var myLatLng = {lat: -8.8025837, lng: 115.2104061};
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 17,
-    center: myLatLng
-  });
-  var marker = new google.maps.Marker({
-    position: myLatLng,
-    map: map,
-  });
-}
-</script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+<script src="js/map.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAF9BOyzOCk8jVFsQ9z1qhxzt3t35z0AR4&callback=initMap"async defer></script>
 <script>
 //COLLAPSE
