--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,12 @@
         <div class="slider about-slider">
           <div>
             <p class="image is-4by5">
-              <img src="image/promo/2.jpeg" style="width:90%; height:auto; margin: 0 auto; margin-left: 0px; margin-top:0; position: absolute; ">
+              <img src="image/promo/2.jpg" style="width:90%; height:auto; margin: 0 auto; margin-left: 0px; margin-top:0; position: absolute; ">
             </p> 
           </div>
           <div>
             <p class="image is-4by5">
-              <img src="image/promo/3.jpeg" style="width:90%; height:auto; margin: 0 auto; margin-left: 0px; margin-top:0; position: absolute; ">
+              <img src="image/promo/3.jpg" style="width:90%; height:auto; margin: 0 auto; margin-left: 0px; margin-top:0; position: absolute; ">
             </p> 
           </div>
         </div>
@@ -324,7 +324,6 @@ Drifting with routines makes dizzy so add another dizziness with clasic margarit
   </div>
 </div>
 
-
 </section>
 
 <div class="waveup"></div>                                      
@@ -410,10 +409,14 @@ Drifting with routines makes dizzy so add another dizziness with clasic margarit
     </div>
 </footer>
 
+
 <script src="js/map.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAF9BOyzOCk8jVFsQ9z1qhxzt3t35z0AR4&callback=initMap"async defer></script>
 <script src="js/collapse.js"></script>
 <script src='js/jquery.min.js'></script>
+<script src='js/js.cookie.min.js'></script>
+<script src='js/bootstrap.min.js'></script>
+<script src="js/modal.js"></script>
 <script src="js/index.js"></script>
 <script src="js/slider.js"></script>
 <script src="js/bulma.js"></script>
@@ -432,9 +435,6 @@ Drifting with routines makes dizzy so add another dizziness with clasic margarit
 
   gtag('config', 'UA-121809054-1');
 </script>
-<script src='js/js.cookie.min.js'></script>
-<script src='js/bootstrap.min.js'></script>
-<script src="js/modal.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </body>
 </html>
